2.0.30 (DEV) update statues, workflowprogress