@@ -1,10 +1,7 @@
 package com.mep.mepbackend.service;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.mep.mepbackend.entity.ApprovalHistory;
-import com.mep.mepbackend.entity.MR;
-import com.mep.mepbackend.entity.User;
-import com.mep.mepbackend.entity.Workflow;
+import com.mep.mepbackend.entity.*;
 import com.mep.mepbackend.exception.ResourceNotFoundException;
 import com.mep.mepbackend.repository.ApprovalHistoryRepository;
 import com.mep.mepbackend.repository.MRRepository;
@@ -14,7 +11,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDate;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
@@ -28,17 +24,9 @@ public class MRService {
     private final WorkflowService workflowService;
     private final StatusService statusService;
     private final CurrentUserUtil currentUserUtil;
+    private final WorkflowProgressService workflowProgressService; // ✅ Thêm
 
-            private static final List<String> PENDING_STATUSES = Arrays.asList("PENDING", "PENDING_PLANNING", "PENDING_PROJECT", "PENDING_CEO");
-
-    // Các trạng thái "kết thúc / hoàn tất" không được tự áp dụng khi vẫn còn bước duyệt phía sau
-    private static final List<String> FINAL_STATUS_CODES = Arrays.asList(
-            "APPROVED", "COMPLETED", "COMPLETE", "CONFIRMED", "RECEIVED", "QC_CHECKED"
-    );
-
-    private static boolean isFinalStatusCode(String code) {
-        return code != null && FINAL_STATUS_CODES.contains(code);
-    }
+    private static final List<String> PENDING_STATUSES = List.of("PENDING", "PENDING_PLANNING", "PENDING_PROJECT", "PENDING_CEO");
 
     private String generateCode(String prefix) {
         long count = mrRepository.count() + 1;
@@ -76,6 +64,7 @@ public class MRService {
         return mrRepository.findByStatus(status);
     }
 
+    // ===== CREATE (CÓ WORKFLOW PROGRESS) =====
     @Transactional
     public MR create(MR mr) {
         if (!currentUserUtil.hasPermission("mr.create")) {
@@ -86,18 +75,26 @@ public class MRService {
         Workflow activeWorkflow = workflowService.getActiveWorkflow("mr");
         mr.setWorkflowId(activeWorkflow.getId());
 
+        // Lấy trạng thái mặc định từ statuses (DRAFT)
         String defaultStatus = statusService.getDefaultStatus("mr").getCode();
         mr.setStatus(defaultStatus);
-        mr.setApprovalStep(1);
+        mr.setApprovalStep(0);
 
         User currentUser = currentUserUtil.getCurrentUser();
         mr.setCreatedBy(currentUser.getId());
         mr.setCreatedByName(currentUser.getName());
-
         mr.setCreatedAt(LocalDate.now());
-        return mrRepository.save(mr);
+
+        // Lưu MR trước
+        MR saved = mrRepository.save(mr);
+
+        // ✅ Khởi tạo workflow progress
+        workflowProgressService.initProgress("mr", saved.getId(), activeWorkflow.getId());
+
+        return saved;
     }
 
+    // ===== UPDATE (GIỮ NGUYÊN) =====
     @Transactional
     public MR update(Long id, MR details) {
         MR mr = getById(id);
@@ -126,7 +123,7 @@ public class MRService {
         return mrRepository.save(mr);
     }
 
-    // ✅ SUBMIT - Bắt đầu tính currentStep
+    // ===== SUBMIT (BẮT ĐẦU WORKFLOW) =====
     @Transactional
     public void submit(Long id) {
         MR mr = getById(id);
@@ -143,15 +140,17 @@ public class MRService {
             throw new RuntimeException("Workflow không có bước duyệt nào");
         }
 
-        // ✅ Bắt đầu tính currentStep = 1
-        mr.setApprovalStep(1);
-        String statusCode = workflowService.getStatusForStep(wf.getId(), 1);
-        mr.setStatus(statusCode != null && !statusCode.isEmpty() ? statusCode : "PENDING");
+        // ✅ Cập nhật tiến trình (currentStep = 1, status = PENDING)
+        workflowProgressService.submitProgress("mr", mr.getId());
+
+        // Cập nhật MR entity
+        mr.setApprovalStep(0);
+        mr.setStatus("PENDING");
         mr.setUpdatedAt(LocalDate.now());
         mrRepository.save(mr);
     }
 
-    // ✅ APPROVE
+    // ===== APPROVE (DUYỆT BƯỚC HIỆN TẠI) =====
     @Transactional
     public void approve(Long id) {
         MR mr = getById(id);
@@ -161,8 +160,9 @@ public class MRService {
 
         Workflow wf = workflowService.getById(mr.getWorkflowId());
         List<Map<String, Object>> steps = workflowService.getStepsByWorkflowId(wf.getId());
-        int currentStep = mr.getApprovalStep() != null ? mr.getApprovalStep() : 1;
+        int currentStep = mr.getApprovalStep() != null ? mr.getApprovalStep() + 1 : 1;
 
+        // Kiểm tra quyền
         Map<String, Object> step = steps.stream()
                 .filter(s -> (int) s.get("step") == currentStep)
                 .findFirst()
@@ -171,13 +171,14 @@ public class MRService {
         String permissionKey = (String) step.get("permissionKey");
         Long requiredDeptId = step.get("departmentId") != null ? ((Number) step.get("departmentId")).longValue() : null;
 
-        // ✅ Kiểm tra điều kiện duyệt
+        // ✅ Kiểm tra quyền dùng currentStep (level >= currentStep)
         if (!currentUserUtil.canApproveStep(currentStep, permissionKey, requiredDeptId)) {
             throw new RuntimeException("Bạn không có quyền duyệt bước này");
         }
 
         User currentUser = currentUserUtil.getCurrentUser();
 
+        // Ghi lịch sử
         ApprovalHistory history = new ApprovalHistory();
         history.setEntityType("MR");
         history.setEntityId(mr.getId());
@@ -185,33 +186,22 @@ public class MRService {
         history.setStep(currentStep);
         history.setApproverId(currentUser.getId());
         history.setApproverName(currentUser.getName());
-                history.setStatusBefore(mr.getStatus());
+        history.setStatusBefore(mr.getStatus());
 
-        // ✅ Nếu là bước cuối cùng
-        if (currentStep == steps.size()) {
-            mr.setStatus("APPROVED");
-            mr.setApprovalStep(0); // Kết thúc
-        } else {
-            // ✅ Vẫn còn các bước phía sau → chỉ di chuyển tới bước kế tiếp, không tự "kết thúc" sớm
-            mr.setApprovalStep(currentStep + 1);
+        // ✅ Cập nhật tiến trình
+        WorkflowProgress progress = workflowProgressService.approveProgress("mr", mr.getId());
 
-            int nextStep = currentStep + 1;
-            String nextStatusCode = workflowService.getStatusForStep(wf.getId(), nextStep);
-            // Trạng thái kế tiếp chỉ dùng được khi KHÔNG phải trạng thái kết thúc.
-            // Nếu người quản trị cấu hình code của bước sau bằng code kết thúc (APPROVED, CONFIRMED, ...),
-            // thì phải chuyển về PENDING chờ người duyệt cuối xác nhận, tuyệt đối không áp dụng sớm.
-            boolean lastCodeIsFinal = isFinalStatusCode(nextStatusCode);
-            mr.setStatus((!lastCodeIsFinal && nextStatusCode != null && !nextStatusCode.isEmpty())
-                    ? nextStatusCode : "PENDING");
-        }
+        // Cập nhật MR entity
+        mr.setApprovalStep(progress.getApprovalStep());
+        mr.setStatus(progress.getStatus());
+        mr.setUpdatedAt(LocalDate.now());
 
         history.setStatusAfter(mr.getStatus());
-
         approvalHistoryRepository.save(history);
-        mr.setUpdatedAt(LocalDate.now());
         mrRepository.save(mr);
     }
 
+    // ===== REJECT =====
     @Transactional
     public void reject(Long id) {
         MR mr = getById(id);
@@ -221,11 +211,16 @@ public class MRService {
         if (!currentUserUtil.hasPermission("mr.reject")) {
             throw new RuntimeException("Bạn không có quyền từ chối MR");
         }
+
+        // ✅ Cập nhật tiến trình
+        workflowProgressService.rejectProgress("mr", mr.getId());
+
         mr.setStatus("REJECTED");
         mr.setUpdatedAt(LocalDate.now());
         mrRepository.save(mr);
     }
 
+    // ===== DELETE =====
     @Transactional
     public void delete(Long id) {
         MR mr = getById(id);
@@ -235,6 +230,7 @@ public class MRService {
         if (!currentUserUtil.hasPermission("mr.delete")) {
             throw new RuntimeException("Bạn không có quyền xóa MR");
         }
+        // Xóa progress nếu có
         mrRepository.delete(mr);
     }
 }
